[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_label.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffolder/src/gui/screens/rate_app_screen.gd" type="Script" id=4]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/spacer.tscn" type="PackedScene" id=6]

[node name="RateAppScreen" type="VBoxContainer"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
screen_name = "rate_app"
nav_bar_text = "How's it going?"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1.0
margin_bottom = 2068.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1.0
margin_bottom = 1102.0
text = "Please let us know if you are seeing any issues on your device!"
valign = 0
autowrap = true
font_size = "S"

[node name="SendFeedbackButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 1106.0
margin_bottom = 1120.0
label = "Send feedback"

[node name="Spacer" parent="VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1124.0
margin_bottom = 1124.0
size = Vector2( 0, 16 )

[node name="Label2" parent="VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1128.0
margin_right = 1.0
margin_bottom = 1958.0
text = "Also, please help our app succeed by rating it!"
valign = 0
autowrap = true
font_size = "S"

[node name="RateAppButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 1962.0
margin_bottom = 1976.0
label = "Rate app!"
font_size = "Xl"

[node name="DontAskAgainButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 1980.0
margin_bottom = 1994.0
label = "Don\\'t ask again"

[node name="Spacer5" parent="VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1998.0
margin_bottom = 1998.0
size = Vector2( 0, 16 )

[node name="KeepPlayingButton" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 2002.0
margin_bottom = 2016.0
label = "Just keep playing!"

[node name="Spacer6" parent="VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 2020.0
margin_bottom = 2020.0
size = Vector2( 0, 20 )

[connection signal="pressed" from="VBoxContainer/SendFeedbackButton" to="." method="_on_SendFeedbackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RateAppButton" to="." method="_on_RateAppButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DontAskAgainButton" to="." method="_on_DontAskAgainButton_pressed"]
[connection signal="pressed" from="VBoxContainer/KeepPlayingButton" to="." method="_on_KeepPlayingButton_pressed"]
